src/test/ui/suggestions/mut-ref-reassignment.stderr
error[E0308]: mismatched types
  --> $DIR/mut-ref-reassignment.rs:2:11
   |
LL |     opt = None
   |           ^^^^ expected mutable reference, found enum `std::option::Option`
   |
   = note: expected type `&mut std::option::Option<std::string::String>`
              found type `std::option::Option<_>`
help: consider dereferencing here to assign to the mutable borrowed piece of memory
   |
LL |     *opt = None
   |     ^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
