src/test/ui/suggestions/mut-ref-reassignment.rs
fn change_opt(opt: &mut Option<String>){
    opt = None //~ ERROR mismatched types
}

fn main() {}
